--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -3,11 +3,18 @@
   overflow: hidden;
   max-width: 300px;
   margin: 10px;
-  z-index:1;
+  z-index: 1;
   @include media(991px) {
     max-width: 500px;
+    &:hover::after{
+      transform: skew(-45deg) scaleX(1);
+    }
+    &:hover .work__desc {
+      opacity: 1;
+    }
   }
-  figure{
+
+  figure {
     height: 100%;
   }
   img {
@@ -24,16 +31,13 @@
     width: 100%;
     height: 100%;
     background: rgba(255, 255, 255, 0.8);
-    transform: skew(-45deg) scaleX(0);
     transition: all 0.4s ease-in-out;
     z-index: 1;
-  }
-  &:hover::after {
     transition: all 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
     transform: skew(-45deg) scaleX(1);
-  }
-  &:hover .work__desc {
-    opacity: 1;
+    @include media(991px) {
+      transform: skew(-45deg) scaleX(0);
+    }
   }
   .work__desc {
     display: flex;
@@ -45,13 +49,16 @@
     justify-content: center;
     text-align: center;
     color: color(appDark);
-    opacity: 0;
+    opacity: 1;
     z-index: 2;
     transition: opacity 0.4s;
-    h3{
+    @include media(991px) {
+      opacity: 0;
+    }
+    h3 {
       font-size: 20px;
     }
-    p{
+    p {
       font-size: 12px;
       max-width: 200px;
       margin: 5px auto 0;
@@ -67,6 +74,5 @@
         margin: 10px auto 0;
       }
     }
-
   }
 }
